--- a/produkter.html
+++ b/produkter.html
@@ -74,7 +74,7 @@
         });
 
         function load() {
-            fetch("http://webacademy.se/fakestore/")
+            fetch("https://webacademy.se/fakestore/")
                 .then((response) => response.json())
                 .then((data) => save(data))
                 .catch((error) => console.error(error));
