--- a/om-oss.html
+++ b/om-oss.html
@@ -49,7 +49,7 @@
                     <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
                 <a href="varukorg.html" target="_blank"><img class="img-fluid rounded-circle" width="70"
-                        src="/images/varukorg.jpg" alt="Varukorg"></a>
+                        src="varukorg.jpg" alt="Varukorg"></a>
 
             </div>
         </div>
