--- a/produkter.html
+++ b/produkter.html
@@ -52,7 +52,7 @@
                     <button type="button" class="btn btn-outline-light">Search</button>
                 </form>
                 <a id="cart" href="varukorg.html"><img class="img-fluid rounded-circle" width="70"
-                        src="/images/varukorg.jpg" alt="Varukorg"></a>
+                        src="../Shopping_cart/images/varukorg.jpg" alt="Varukorg"></a>
 
             </div>
         </div>
