--- a/produkter.html
+++ b/produkter.html
@@ -51,8 +51,8 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button type="button" class="btn btn-outline-light">Search</button>
                 </form>
-                <a id="cart" href="varukorg.html"><img class="img-fluid rounded-circle" width="70"
-                        src="../Shopping_cart/images/varukorg.jpg" alt="Varukorg"></a>
+                <a id="cart" href="./varukorg.html"><img class="img-fluid rounded-circle" width="70"
+                        src="./images/varukorg.jpg" alt="Varukorg"></a>
 
             </div>
         </div>
