--- a/index.html
+++ b/index.html
@@ -54,32 +54,30 @@
         </div>
     </nav>
 
-    <div class="row gx-0">
-        <div class="col ">
+    <div class="row g-0">
+        <div class="col-sm ">
             <img src="images/girl.jpg" class="img-fluid" alt="">
         </div>
-        <div class="col ">
+        <div class="col-sm ">
             <img src="images/blur.jpg" class="img-fluid" alt="">
         </div>        
-        <div class="col ">
+        <div class="col-sm ">
             <img src="images/ecommerce.jpg" class="img-fluid" alt="">
         </div>
     </div>
-     <div class="row gy-0">
-        <div class="col gx-0">
+     <div class="row g-0">
+        <div class="col-md">
          <div class="card" style="background-color: #a6ddf7;">
             <div class="card-body">
               <h2 class="card-title" style="text-align: center; color: #6930C3">Nyheter</h2>
-              <p class="card-text" style="color:  #a6ddf7;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro corporis sed at voluptatem nesciunt repellendus unde sequi minus? Nihil iure, totam quis optio neque aut unde ut! Deleniti, id velit sequi incidunt voluptatibus dolorem ea nisi voluptas tempora praesentium, enim officiis ipsa ducimus saepe, totam vel ab quia? Nisi, quod.</p>
               
             </div>
           </div>
         </div>
-        <div class="col gx-0">
+        <div class="col-md">
           <div class="card" style="background-color: #a6ddf7;">
             <div class="card-body">
               <h2 class="card-title" style="text-align: center; color: #6930C3">Utförsäljning</h2>
-              <p class="card-text" style="color:  #a6ddf7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus vero voluptatem aut facilis natus possimus ipsam perferendis impedit eaque, iusto, minus sed velit illo ratione obcaecati, praesentium unde quos id eum blanditiis. Id, accusamus? Assumenda aspernatur, eos obcaecati sequi nostrum dolores accusamus sint neque autem cum fugiat! Enim, facere obcaecati.</p>
             </div>
           </div>
       </div>
