--- a/produkter.html
+++ b/produkter.html
@@ -58,8 +58,10 @@
         </div>
     </nav>
 
-    <div id="products" class="row row-cols-4 g-5" style="margin-bottom: 5rem; margin-top: 5rem; margin-left: 2rem; margin-right: 2rem;">
+    <div class="container">
+    <div class="row" id="products" style="margin-bottom: 5rem; margin-top: 5rem">
     </div>
+</div>
     <div id="info" class="alert alert-info alert-dismissible" role="alert">
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
@@ -91,7 +93,7 @@
             products.forEach(element => {
                 let round = parseInt(element.price).toFixed(2);
                 $("#products").append(
-                    `<div class="col">
+                    `<div class="col-sm-3 pb-5">
                             <div class="card text-center h-100" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)">
                              <img src="${element.image}" alt="img" class="card-img-top">
                                 <div class="card-body d-flex flex-column">
