--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
-                <a href="./varukorg.html" target="_blank"><img class="img-fluid rounded-circle" width="70"
+                <a href="./varukorg.html"><img class="img-fluid rounded-circle" width="70"
                         src="./images/varukorg.jpg" alt="Varukorg"></a>
 
             </div>
